# ABL-BoothApp

./: .gitignore  CHANGELOG-v1.1.md  README.md  package-lock.json  package.json  translate_faq.py
docs/: BUILD.md  index.md  translate_faq.py
docs/.vitepress/: config.js
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: Landing.vue  LandingEn.vue  LandingJp.vue  Timeline.vue  TimelineEn.vue  TimelineJp.vue
docs/en/: index.md
docs/en/faq/: advanced.md  community.md  data-migration.md  hardware.md  images-ui.md  incidents.md  index.md  network.md  operation.md
docs/en/guide/: getting-started.md
docs/en/support/: contact.md
docs/faq/: index.md  network.md  operation.md
docs/guide/: boundary.md  getting-started.md  network.md  philosophy.md  vision-search.md  why-offline.md
docs/ja/: index.md
docs/ja/faq/: advanced.md  community.md  data-migration.md  hardware.md  images-ui.md  incidents.md  index.md  network.md  operation.md
docs/ja/guide/: getting-started.md
docs/ja/support/: contact.md
docs/releases/: v1.1.0.md
docs/support/: contact.md
frontend/: package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: GlobalAlert.vue
frontend/src/components/customer/: PaymentModal.vue  ProductGrid.vue  ShoppingCart.vue
frontend/src/components/event/: CreateEventForm.vue  EditEventForm.vue  EventList.vue
frontend/src/components/order/: OrderCard.vue
frontend/src/components/product/: BoothpackSyncPanel.vue  CreateMasterProductForm.vue  EditMasterProductModal.vue  MasterProductList.vue  VisionModelPanel.vue
frontend/src/components/shared/: CollapsibleSection.vue  EmptyGuide.vue  HelpBubble.vue  ImageUploader.vue  MainHeader.vue  UpdateModal.vue  VisionSearch.vue
frontend/src/components/stats/: SalesLineChart.vue  StatFilters.vue
frontend/src/composables/: useConnectionCheck.js
frontend/src/config/: helpContent.js  theme.js
frontend/src/router/: index.js
frontend/src/services/: api.js  vision.js
frontend/src/stores/: authStore.js  customerStore.js  eventStatStore.js  orderStore.js  productStore.js  syncStore.js  themeStore.js
frontend/src/utils/: upload.js
frontend/src/views/: About.vue  AdminControlPanel.vue  AdminDashboard.vue  AdminEventOrders.vue  AdminEventProducts.vue  AdminEventStat.vue  AdminLayout.vue  AdminMasterProducts.vue  CustomerView.vue  EventPortalView.vue  Help.vue  LoginView.vue  ThemeSetting.vue  VendorEventSelection.vue  VendorView.vue
scripts/: convert_to_fp16.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/vision/: model_registry.json  vision_model.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202603050001_add_vision_tables.sql  202604190001_add_missing_indexes.sql  202604190002_add_tags_column.sql
src-tauri/src/: lib.rs  server.rs  state.rs
src-tauri/src/api/: auth.rs  event.rs  master_product.rs  mod.rs  order.rs  product.rs  stats.rs  sync.rs  vision.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/utils/: file.rs
src-tauri/src/vision/: download.rs  index.rs  mod.rs  model.rs  model_manager.rs  rebuild.rs  session.rs  state.rs  store.rs
